--- a/index.html
+++ b/index.html
@@ -59,6 +59,10 @@
     <div class="light"></div>
 </div>
 
+<audio autoplay loop>
+    <source src="assets/audio/Knight-Rider-Theme-Song.mp3" type="audio/mp3">
+</audio>
+
 <script>
     const frames = [
         ["red", "pink", "white", "white", "white", "white", "white"],
